fix td overflow

--- a/static/src/css/customStyle.less
+++ b/static/src/css/customStyle.less
@@ -326,7 +326,7 @@ body{
 //服务台中二级表格溢出的问题
 body{
     div.openerp_webclient_container{
-        div.oe_form_field.oe_form_field_one2many{
+        div.oe_notebook_page>div.oe_form_field.oe_form_field_one2many{
             overflow: auto;
             table.oe_list_content{
                 table-layout: fixed;
